# Telemetrie-Analyzer

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  INSTALLATION.md  Makefile  README.md  SECURITY.md  Shadow_AI_Telemetry_Analyzer_Projektbriefing.md  app.py  docker-compose.offline.yml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: db_review.yml
.github/workflows/: ci.yml  db-review-issue.yml  docker-release.yml  endpoint-db-update.yml  release.yml
.streamlit/: config.toml
config/: retention.yaml
data/: CHANGELOG_AI_ENDPOINTS.md  ai_endpoints.json  ai_endpoints_schema.json  ai_ip_ranges.json
data/versions/: 2.3.0.json
docs/: AI_COVERAGE.md  OFFLINE_AI.md  PRIVACY.md  QUICKSTART.md  RELEASE_NOTES_v1.0.0.md
docs/screenshots/: CHECKLIST.md  README.md
docs/style/: CI_GUIDE.md
examples/test_reports/: README.md
examples/test_reports/aws_vpc_flow/: report_compliance.html  report_executive.html  report_executive.md  report_it_sec.html  report_it_sec.md
examples/test_reports/cloudflare_gateway/: report.json  report_compliance.html  report_compliance.md  report_executive.html  (+3 more)
mappings/: cra.yaml
scripts/: _gen_aws_vpc_fixture.py  _gen_cloudflare_fixture.py  _gen_entra_id_fixture.py  _gen_fortinet_fixture.py  _gen_netskope_fixture.py  _gen_paloalto_fixture.py  _gen_umbrella_fixture.py  capture_screenshots.py  db_coverage_report.py  db_health_check.py  enrich_samples.py  generate_example_reports.py  generate_sbom.sh  refresh_endpoints.py  refresh_testdata_dates.py  verify_screenshots.py
src/: cli.py
src/analytics/: __init__.py  bursts.py  sessions.py  temporal.py
src/analyzer/: analyzer.py
src/compliance/: engine.py  models.py
src/database/: ai_endpoints.py  versioning.py
src/detection/: asn_fallback.py  engine.py
src/parsers/: __init__.py  aws_vpc_flow.py  base.py  cloudflare_gateway.py  detection.py  elastic_ecs.py  entra_id.py  fortinet.py  netskope.py  paloalto.py  pihole.py  squid.py  sysmon.py  umbrella.py  zscaler.py
src/privacy/: k_anonymity.py  pseudonymizer.py  retention.py
src/reports/: __init__.py  charts.py  context.py  generator.py  privacy.py
src/testdata/: generator.py
src/ui/: __init__.py  branding.py  glossary.py  scenarios.py  state.py
tests/: test_ai_endpoints.py  test_ai_endpoints_coverage.py  test_ai_endpoints_v2.py  test_analytics.py  test_analyzer.py  test_analyzer_backend_dispatch.py  test_asn_fallback.py  test_aws_vpc_flow_parser.py  test_branding.py  test_cli.py  test_cloudflare_gateway_parser.py  test_compliance.py  test_db_freshness.py  test_db_versioning.py  test_detection.py  test_detection_module.py  test_detection_multifallback.py  test_e2e_pipeline.py  test_elastic_ecs_parser.py  test_entra_id_parser.py  test_findings_filter.py  test_fortinet_parser.py  test_generator_scenarios.py  test_glossary.py  test_llm_backends.py  test_netskope_parser.py  test_paloalto_parser.py  test_parser_base.py  test_pihole_parser.py  test_pseudonymizer.py  test_reports.py  test_retention.py  test_scenarios.py  test_sessions.py  test_squid_parser.py  test_squid_username.py  test_sysmon_parser.py  test_ui.py  test_ui_all_formats.py  test_umbrella_parser.py  (+2 more)
(+115 files in other folders)
