[project]
name = "telemetrie-analyzer"
version = "0.1.0"
description = "KI-gestütztes Analyse-Tool zur Erkennung nicht-autorisierter KI-Nutzung (Shadow AI) in Unternehmensnetzen"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "plotly>=5.0",
    "anthropic>=0.40",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
