[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "telemetrie-analyzer"
version = "1.4.0"
description = "Shadow-AI-Detection via DNS/Proxy-Log-Analyse mit Compliance-Mapping auf DORA, EU AI Act, ISO 42001, ISO 27001, DSGVO und EU CRA."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Florian Priegnitz", email = "florian-priegnitz@users.noreply.github.com" },
]
keywords = [
    "shadow-ai",
    "ai-governance",
    "dns-logs",
    "proxy-logs",
    "compliance",
    "dora",
    "eu-ai-act",
    "iso-42001",
    "iso-27001",
    "gdpr",
    "dsgvo",
    "privacy-by-design",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking :: Monitoring",
    "Typing :: Typed",
]
dependencies = [
    "pandas>=2.0",
    "plotly>=5.0",
    "anthropic>=0.40",
    "jinja2>=3.1",
    "streamlit>=1.35",
    "jsonschema>=4.0",
    "pyyaml>=6.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "bandit>=1.7",
]

[project.scripts]
telemetrie-analyzer = "src.cli:main"

[project.urls]
Homepage = "https://github.com/florian-priegnitz/Telemetrie-Analyzer"
Repository = "https://github.com/florian-priegnitz/Telemetrie-Analyzer"
Issues = "https://github.com/florian-priegnitz/Telemetrie-Analyzer/issues"
Changelog = "https://github.com/florian-priegnitz/Telemetrie-Analyzer/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "templates/",
    "config/",
    "data/",
    "scripts/",
    "tests/",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"
extend-exclude = [
    "reports/",
    "testdata/",
    "Shadow_AI_Telemetry_Analyzer_Projektbriefing.md",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",
    "B007",
    "B008",
    "B023",
    "B904",
    "B905",
    "UP042",
    "SIM102",
    "SIM105",
    "SIM108",
    "SIM115",
    "SIM117",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011", "SIM"]

[tool.bandit]
skips = ["B101"]
exclude_dirs = ["tests", "reports", "testdata"]
